[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-trust-stack-mcp"
version = "0.2.0"
description = "MCP server for autonomous AI agent trust — cryptographic provenance (Chain of Consciousness with Bitcoin OpenTimestamps), decentralized reputation (Agent Rating Protocol with bilateral blind evaluation). Part of the 7-protocol Agent Trust Stack."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AB Support Research Team", email = "alex@vibeagentmaking.com" },
]
keywords = [
    "mcp", "model-context-protocol", "agent", "trust", "provenance",
    "reputation", "chain-of-consciousness", "rating-protocol",
    "autonomous-agents", "AI", "infrastructure",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "smithery>=0.2.4",
]

[project.optional-dependencies]
ots = [
    "opentimestamps>=0.4.0",
]

[project.urls]
Homepage = "https://vibeagentmaking.com"
Documentation = "https://vibeagentmaking.com/whitepaper/theory-of-agent-trust/"
Repository = "https://github.com/alexfleetcommander/agent-trust-stack-mcp"
Issues = "https://github.com/alexfleetcommander/agent-trust-stack-mcp/issues"
Changelog = "https://github.com/alexfleetcommander/agent-trust-stack-mcp/blob/main/CHANGELOG.md"

[project.scripts]
agent-trust-stack-mcp = "agent_trust_stack_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trust_stack_mcp"]

[tool.smithery]
server = "agent_trust_stack_mcp.server:create_server"
